--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -76,6 +76,9 @@
         "__node_handle": "cpp",
         "__memory": "cpp",
         "filesystem": "cpp",
-        "locale": "cpp"
+        "locale": "cpp",
+        "list": "cpp",
+        "map": "cpp",
+        "set": "cpp"
     }
 }
