--- a/Proyecto/Makefile
+++ b/Proyecto/Makefile
@@ -1,5 +1,5 @@
 LDLIBS = -lm -pthread
-CFLAGS = -g -Wall -Wno-unused-but-set-variable -Wunused-variable
+CFLAGS = -g
 SRC_DIR = ./src
 
 TARGETS = server client_sub client_pub
@@ -17,4 +17,3 @@ client_pub: ${SRC_DIR}/client_pub.cpp ${SRC_DIR}/MQTT.cpp
 
 clean:
 	@rm -f ${TARGETS} core*
-
